# page_classification_system

./: .gitignore  README.md  jsonl_to_excel.py  pyproject.toml  requirements.txt  run.py  sample_output.jsonl  test_llm.py
config/: config.yaml  ruleset.json
config/term_dictionaries/: investor_beginner.txt  investor_qualified.txt  issuer_advanced.txt  issuer_beginner.txt  professional.txt
src/page_classification/: __init__.py  main.py
src/page_classification/agent/: __init__.py  mcp_agent.py
src/page_classification/config/: __init__.py  loader.py
src/page_classification/models/: __init__.py  classification_result.py  page_package.py  term_scores.py  url_record.py
src/page_classification/tools/: __init__.py  classify_llm_tool.py  crawl_tool.py  extract_tool.py  fetch_tool.py  render_tool.py  storage_tool.py  validate_tool.py
