[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "page-classification-system"
version = "0.1.0"
description = "Page Classification System for Exchange Websites using MCP Agent and LLM"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
